ReSharper.FSharp/test/data/parsing/errors/Type decl - Record - Ctor 02 - As.fs
type R(a: int) as this =
    { F: int }
